--- a/ETL_Engineer_Peer_Review_Assignment.ipynb
+++ b/ETL_Engineer_Peer_Review_Assignment.ipynb
@@ -730,9 +730,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enjoy Learning\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Enjoy Learning\")"
    ]
