change raw to markup

--- a/etl-and-data-pipelines-shell-airflow-kafka/week-4/Kafka_intro.ipynb
+++ b/etl-and-data-pipelines-shell-airflow-kafka/week-4/Kafka_intro.ipynb
@@ -33,13 +33,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "0e9801b2",
+   "cell_type": "markdown",
+   "id": "d9b63d0d",
    "metadata": {},
    "source": [
+    "```sh\n",
     "wget https://archive.apache.org/dist/kafka/2.8.0/kafka_2.12-2.8.0.tgz\n",
     "tar -xzf kafka_2.12-2.8.0.tgz\n",
-    "cd kafka_2.12-2.8.0"
+    "cd kafka_2.12-2.8.0\n",
+    "```"
    ]
   },
   {
@@ -51,11 +53,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "285218c4",
+   "cell_type": "markdown",
+   "id": "4c451f33",
    "metadata": {},
    "source": [
-    "bin/zookeeper-server-start.sh config/zookeeper.properties"
+    "```sh\n",
+    "bin/zookeeper-server-start.sh config/zookeeper.properties\n",
+    "```"
    ]
   },
   {
@@ -67,11 +71,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "18388fac",
+   "cell_type": "markdown",
+   "id": "6868c7b3",
    "metadata": {},
    "source": [
-    "bin/kafka-server-start.sh config/server.properties"
+    "```sh\n",
+    "bin/kafka-server-start.sh config/server.properties\n",
+    "```"
    ]
   },
   {
@@ -83,11 +89,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d4fdf435",
+   "cell_type": "markdown",
+   "id": "6d580773",
    "metadata": {},
    "source": [
-    "bin/kafka-topics.sh --create --topic news --bootstrap-server localhost:9092"
+    "```sh\n",
+    "bin/kafka-topics.sh --create --topic news --bootstrap-server localhost:9092\n",
+    "```"
    ]
   },
   {
@@ -99,11 +107,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "53ab0eae",
+   "cell_type": "markdown",
+   "id": "62b10741",
    "metadata": {},
    "source": [
-    "bin/kafka-console-producer.sh --topic news --bootstrap-server localhost:9092"
+    "```sh\n",
+    "bin/kafka-console-producer.sh --topic news --bootstrap-server localhost:9092\n",
+    "```"
    ]
   },
   {
@@ -115,11 +125,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d751b0d7",
+   "cell_type": "markdown",
+   "id": "77ddaaa4",
    "metadata": {},
    "source": [
-    "bin/kafka-console-consumer.sh --topic news --from-beginning --bootstrap-server localhost:9092"
+    "```sh\n",
+    "bin/kafka-console-consumer.sh --topic news --from-beginning --bootstrap-server localhost:9092\n",
+    "```"
    ]
   },
   {
@@ -139,11 +151,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "07111a31",
+   "cell_type": "markdown",
+   "id": "fc87d91c",
    "metadata": {},
    "source": [
-    "rm kafka_2.12-2.8.0.tgz"
+    "```sh\n",
+    "rm kafka_2.12-2.8.0.tgz\n",
+    "```"
    ]
   },
   {
@@ -163,30 +177,36 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f0c2d807",
+   "cell_type": "markdown",
+   "id": "369e6576",
    "metadata": {},
    "source": [
+    "```sh\n",
     "# create new topic named weather\n",
-    "bin/kafka-topics.sh --create --topic weather --bootstrap-server localhost:9092"
+    "bin/kafka-topics.sh --create --topic weather --bootstrap-server localhost:9092\n",
+    "```"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6c14052a",
+   "cell_type": "markdown",
+   "id": "da012325",
    "metadata": {},
    "source": [
+    "```sh\n",
     "# post message to weather\n",
-    "bin/kafka-console-producer.sh --topic weather --bootstrap-server localhost:9092"
+    "bin/kafka-console-producer.sh --topic weather --bootstrap-server localhost:9092\n",
+    "```"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "bb96cdd9",
+   "cell_type": "markdown",
+   "id": "79feda5e",
    "metadata": {},
    "source": [
+    "```sh\n",
     "# read the message from topic weather\n",
-    "bin/kafka-console-consumer.sh --topic weather --from-beginning --bootstrap-server localhost:9092"
+    "bin/kafka-console-consumer.sh --topic weather --from-beginning --bootstrap-server localhost:9092\n",
+    "```"
    ]
   },
   {
