update NB to markdown of week 2 lab of data warehouse

--- a/getting-started-with-data-warehousing-and-bi-analytics/week-2/Designing, Modeling and Implementing Data Warehouses.ipynb
+++ b/getting-started-with-data-warehousing-and-bi-analytics/week-2/Designing, Modeling and Implementing Data Warehouses.ipynb
@@ -9,10 +9,19 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2ffddc96",
+   "cell_type": "markdown",
+   "id": "0dee24fe",
    "metadata": {},
    "source": [
+    "* Working with Facts and Dimension Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1145920",
+   "metadata": {},
+   "source": [
+    "```sh\n",
     "    1  ls\n",
     "    2  start_postgres \n",
     "    3  psql --username=postgres --host=localhost\n",
@@ -31,7 +40,8 @@
     "   16  cat FactBilling.sql | tail -10\n",
     "   17  ls\n",
     "   18  psql  -h localhost -U postgres -p 5432 billingDW < verify.sql \n",
-    "   19  cat verify.sql "
+    "   19  cat verify.sql\n",
+    "```"
    ]
   },
   {
@@ -43,14 +53,22 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "e0f3d414",
+   "cell_type": "markdown",
+   "id": "9029a5c3",
    "metadata": {},
    "source": [
-    "The files are here.\n",
+    "```sh\n",
+    "# The files are here.\n",
     "wget https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DB0260EN-SkillsNetwork/labs/Setting%20up%20a%20staging%20area/billing-datawarehouse.tgz\n",
-    "\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cf5d4ce",
+   "metadata": {},
+   "source": [
+    "```sh\n",
     "theia@theiadocker-khanmdabid14:/home/project$ createdb -U postgres practice\n",
     "createdb: error: connection to server on socket \"/var/run/postgresql/.s.PGSQL.5432\" failed: No such file or directory\n",
     "        Is the server running locally and accepting connections on that socket?\n",
@@ -94,7 +112,8 @@
     " 132000\n",
     "(1 row)\n",
     "\n",
-    "theia@theiadocker-khanmdabid14:/home/project$ "
+    "theia@theiadocker-khanmdabid14:/home/project$ \n",
+    "```"
    ]
   },
   {
@@ -135,10 +154,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c71ff958",
+   "cell_type": "markdown",
+   "id": "25f82212",
    "metadata": {},
    "source": [
+    "```sh\n",
     "    2  db2cli writecfg add -database BLUDB -host 0c77d6f2-5da9-48a9-81f8-86b520b87518.bs2io90l08kqb1od8lcg.databases.appdomain.cloud -port 31198 -parameter \"SecurityTransportMode=SSL\"\n",
     "    3  db2cli writecfg add -dsn production -database BLUDB -host 0c77d6f2-5da9-48a9-81f8-86b520b87518.bs2io90l08kqb1od8lcg.databases.appdomain.cloud -port 31198\n",
     "    4  db2cli validate -dsn production -connect -user fpx98409 -passwd eofwGd0p89jYetmS\n",
@@ -153,7 +173,8 @@
     "   13  ls\n",
     "   14  wget https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DB0260EN-SkillsNetwork/labs/Populating%20a%20Data%20Warehouse/verify.sql\n",
     "   15  db2cli execsql -dsn production -user fpx98409 -passwd eofwGd0p89jYetmS -inputsql verify.sql \n",
-    "   16  db2cli execsql -dsn production -user fpx98409 -passwd eofwGd0p89jYetmS"
+    "   16  db2cli execsql -dsn production -user fpx98409 -passwd eofwGd0p89jYetmS\n",
+    "```"
    ]
   },
   {
@@ -186,10 +207,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "888298ad",
+   "cell_type": "markdown",
+   "id": "e63668dc",
    "metadata": {},
    "source": [
+    "```sql\n",
     "SELECT brand, segment, SUM (quantity) FROM sales GROUP BY brand, segment\n",
     "UNION ALL SELECT brand, NULL, SUM (quantity) FROM sales GROUP BY brand \n",
     "UNION ALL SELECT NULL, segment, SUM (quantity) FROM sales GROUP BY segment \n",
@@ -204,7 +226,8 @@
     "        (brand),\n",
     "        (segment),\n",
     "        ()\n",
-    "    );"
+    "    );\n",
+    "```"
    ]
   },
   {
@@ -229,26 +252,26 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6a3b7701",
+   "cell_type": "markdown",
+   "id": "81bea256",
    "metadata": {},
    "source": [
+    "```sql\n",
     "select year,category, sum(billedamount) as totalbilledamount from factbilling\n",
     "left join dimcustomer on factbilling.customerid = dimcustomer.customerid\n",
     "left join dimmonth on factbilling.monthid=dimmonth.monthid\n",
     "group by grouping sets ((year, category), (year), (category), ())\n",
     "order by year, category;\n",
     "\n",
-    "_________________________________\n",
-    "is similar to the below query\n",
-    "_________________________________\n",
     "\n",
+    "/* is similar to the below query */\n",
     "\n",
     "select year,category, sum(billedamount) as totalbilledamount from factbilling\n",
     "left join dimcustomer on factbilling.customerid = dimcustomer.customerid\n",
     "left join dimmonth on factbilling.monthid=dimmonth.monthid\n",
     "group by rollup(year,category)\n",
-    "order by year, category;"
+    "order by year, category;\n",
+    "```"
    ]
   },
   {
@@ -260,14 +283,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c96092c0",
+   "cell_type": "markdown",
+   "id": "e35b5826",
    "metadata": {},
    "source": [
+    "```sql\n",
     "CUBE(c1,c2,c3)\n",
-    "_________________________________\n",
-    "is similar to the below query\n",
-    "_________________________________\n",
+    "\n",
+    "/* is similar to the below query */\n",
     "\n",
     "GROUPING SETS (\n",
     "    (c1,c2,c3), \n",
@@ -278,15 +301,16 @@
     "    (c2),\n",
     "    (c3), \n",
     "    ()\n",
-    ")"
+    ")\n",
+    "```"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ec6cdb7f",
+   "cell_type": "markdown",
+   "id": "1e2726db",
    "metadata": {},
    "source": [
-    "In general, if the number of columns specified in the CUBE is n, then you will have 2**n combinations."
+    "_In general, if the number of columns specified in the CUBE is n, then you will have 2**n combinations._"
    ]
   },
   {
@@ -298,11 +322,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "861571f6",
+   "cell_type": "markdown",
+   "id": "8aacebac",
    "metadata": {},
    "source": [
-    "CUBE subclause returns all the combinations of the specified columns.\n",
+    "```sql\n",
+    "/* CUBE subclause returns all the combinations of the specified columns. */\n",
     "\n",
     "CUBE(c1,c2,c3)\n",
     "\n",
@@ -317,8 +342,7 @@
     "    ()\n",
     ")\n",
     "\n",
-    "************************************************************\n",
-    "where ROLLUP subclause will generate the below grouping sets.\n",
+    "/* where ROLLUP subclause will generate the below grouping sets. */\n",
     "\n",
     "ROLLUP(c1,c2,c3)\n",
     "\n",
@@ -327,7 +351,8 @@
     "    (c1, c2)\n",
     "    (c1)\n",
     "    ()\n",
-    ")"
+    ")\n",
+    "```"
    ]
   },
   {
@@ -339,10 +364,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "af3620f9",
+   "cell_type": "markdown",
+   "id": "b759d815",
    "metadata": {},
    "source": [
+    "```sql\n",
     "/* Warning: The materialized query table may not be used to optimize the processing of queries. */\n",
     "\n",
     "CREATE TABLE countrystats (country, year, totalbilledamount) AS\n",
@@ -355,19 +381,21 @@
     "group by country,year)\n",
     "     DATA INITIALLY DEFERRED\n",
     "     REFRESH DEFERRED\n",
-    "     MAINTAINED BY SYSTEM;"
+    "     MAINTAINED BY SYSTEM;\n",
+    "```"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2172eb1c",
+   "cell_type": "markdown",
+   "id": "935adf55",
    "metadata": {},
    "source": [
     "The settings\n",
     "\n",
-    "* DATA INITIALLY DEFERRED\n",
-    "* REFRESH DEFERRED\n",
-    "* MAINTAINED BY SYSTEM\n",
+    "1. DATA INITIALLY DEFERRED\n",
+    "2. REFRESH DEFERRED\n",
+    "3. MAINTAINED BY SYSTEM\n",
+    "\n",
     "Simple mean that data is not initially populated into this MQT. Whenever the underlying data changes, the MQT does NOT automatically refresh. The MQT is system maintained and not user maintained."
    ]
   },
@@ -380,11 +408,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6109102a",
+   "cell_type": "markdown",
+   "id": "8f98bb6c",
    "metadata": {},
    "source": [
-    "refresh table countrystats;"
+    "```sql\n",
+    "refresh table countrystats;\n",
+    "```"
    ]
   },
   {
@@ -396,11 +426,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "22e4d9bf",
+   "cell_type": "markdown",
+   "id": "d8c083e1",
    "metadata": {},
    "source": [
-    "select * from countrystats"
+    "```sql\n",
+    "select * from countrystats;\n",
+    "```"
    ]
   },
   {
@@ -412,45 +444,51 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8dbfbabb",
+   "cell_type": "markdown",
+   "id": "686a62a0",
    "metadata": {},
    "source": [
-    "Problem 1\n",
-    "    \n",
+    "```sql\n",
+    "/* Problem 1 */\n",
+    "\n",
     "select year, quartername, sum(billedamount) as totalbilledamount from factbilling\n",
     "left join dimcustomer on factbilling.customerid = dimcustomer.customerid\n",
     "left join dimmonth on factbilling.monthid=dimmonth.monthid\n",
     "group by grouping sets ((year, quartername), (year), (quartername), ())\n",
-    "order by year, quartername;"
+    "order by year, quartername;\n",
+    "```"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b9cfa950",
+   "cell_type": "markdown",
+   "id": "418d52e2",
    "metadata": {},
    "source": [
-    "Problem 2\n",
+    "```sql\n",
+    "/* Problem 2 */\n",
     "\n",
     "select country, category, sum(billedamount) as totalbilledamount from factbilling\n",
     "left join dimcustomer on factbilling.customerid = dimcustomer.customerid\n",
     "left join dimmonth on factbilling.monthid=dimmonth.monthid\n",
     "group by rollup(country, category)\n",
-    "order by country, category;"
+    "order by country, category;\n",
+    "```"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "fe81d662",
+   "cell_type": "markdown",
+   "id": "c1243256",
    "metadata": {},
    "source": [
-    "Problem 3\n",
+    "```sql\n",
+    "/* Problem 3 */\n",
     "\n",
     "select year, country, category, sum(billedamount) as totalbilledamount from factbilling\n",
     "left join dimcustomer on factbilling.customerid = dimcustomer.customerid\n",
     "left join dimmonth on factbilling.monthid=dimmonth.monthid\n",
     "group by cube(year, country, category)\n",
-    "order by year, country, category;"
+    "order by year, country, category;\n",
+    "```"
    ]
   },
   {
@@ -467,11 +505,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f54672b2",
+   "cell_type": "markdown",
+   "id": "24195c87",
    "metadata": {},
    "source": [
-    "Problem 4\n",
+    "```sql\n",
+    "/* Problem 4 */\n",
     "\n",
     "CREATE TABLE average_billamount (year, quarter, category, country, average_bill_amount) AS\n",
     "  (select year, quarter, category, country, avg(billedamount)\n",
@@ -481,7 +520,8 @@
     "group by year, quarter, category, country)\n",
     "     DATA INITIALLY DEFERRED\n",
     "     REFRESH DEFERRED\n",
-    "     MAINTAINED BY SYSTEM;"
+    "     MAINTAINED BY SYSTEM;\n",
+    "```"
    ]
   },
   {
@@ -498,19 +538,39 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "fe6bbb6b",
+   "cell_type": "markdown",
+   "id": "d16acb76",
    "metadata": {},
    "source": [
-    "refresh table countrystats;"
+    "* Refresh the table"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "58d9c3ff",
+   "cell_type": "markdown",
+   "id": "03f07446",
    "metadata": {},
    "source": [
-    "select * from average_billamount;"
+    "```sql\n",
+    "refresh table average_billamount;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bae9fae7",
+   "metadata": {},
+   "source": [
+    "* Select query on MQT average_billamount"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "923e81c1",
+   "metadata": {},
+   "source": [
+    "```sql\n",
+    "select * from average_billamount;\n",
+    "```"
    ]
   },
   {
